
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SYS_osf_wait4 ;
 int exit (int) ;
 int fork () ;
 int syscall (int ,int,int*,int ,int) ;

void kernel_write(unsigned long addr, int value)
{
 int pid = fork();

 if (pid) {

  syscall(SYS_osf_wait4, pid, (int *)addr, 0, 1);
  return;
 } else {
  exit(value);
 }
}
